# CEEPEW

./: .editorconfig  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PATCH_APPLICATION_GUIDE.md  README.md  SECURITY.md  apply_patches.py  apply_ui_patches.sh  build_full_log.txt  build_output.txt  cap_serial.py  commit_msg.txt  diagnose.ps1  dual_capture.py  esp_adc_cal.h  esp_crc.h  esp_system.h  final_build.txt  log.ceepew.20260612193514.txt  log.ceepew.20260612193801.txt  partitions_custom.csv  platformio.ini  sdkconfig.defaults  sdkconfig.production  skills-lock.json  verify_handoff_fix.ps1
.github/: copilot-instructions.md
.github/workflows/: stub_check.yml
P2P E2EE wireless Communicator/Research/Ideas/: final_ideas.txt  ideas1.txt  ideas3.txt  idess2.txt
P2P E2EE wireless Communicator/Research/Plans, Architecture, Decisions/: CEEPEW_Addendum_B_Numerology_and_ProjectMode.md  CEEPEW_Addendum_C_ESL_Security_Framework.md  CEEPEW_Addendum_D_Arbitrary_Computation.md  CEEPEW_Addendum_PinConfig_ResourceMonitor.md  CEEPEW_Architecture_v1.md  CEEPEW_Final_Master_Specification_v2.md
components/ceepew_hal/: CMakeLists.txt  README.md  esp_adc_cal.c  esp_adc_cal.h  hal_adc.c  hal_adc.h  hal_efuse.c  hal_efuse.h  hal_gpio.c  hal_i2c_scanner.c  hal_i2c_scanner.h  hal_input.c  hal_input.h  hal_input_additions.c  hal_oled.c  hal_oled.h  hal_pins.c  hal_pins.h  hal_power.c  hal_power.h  hal_radio.c  hal_radio.h  hal_rgb.c  hal_rgb.h  hal_rng.c  hal_temp.c  hal_temp.h  hal_timer.c  hal_timer.h  hal_ui.c  hal_ui.h  hal_ui_guard.h  hal_ui_helpers.c  layout.c  layout.h  task_arch.c  task_arch.h  ui_cryptogram_test.c  ui_manager.c  ui_manager.h  (+1 more)
components/ceepew_oled/: CMakeLists.txt  LICENSE  README.md  ceepew_assert.c  ceepew_assert.h  ceepew_oled.c  ceepew_oled_font_adapter.c  ceepew_oled_font_adapter.h  ceepew_oled_gfx_primitives.c  ceepew_oled_gfx_primitives.h  hal_ui_types.h
components/ceepew_oled/include/: ceepew_oled.h
components/compress/: CMakeLists.txt  compress_huffman.c  compress_huffman.h
components/crypto/: CMakeLists.txt  README.md  crypto_ascon.c  crypto_ascon.h  crypto_box_wrap.c  crypto_box_wrap.h  crypto_ctx.c  crypto_ctx.h  crypto_ecdh.c  crypto_ecdh.h  crypto_eddsa.c  crypto_eddsa.h  crypto_hkdf.c  crypto_hkdf.h  crypto_hmac.c  crypto_hmac.h  crypto_hmac_efuse.c  crypto_hmac_efuse.h  crypto_pad.c  crypto_rng.c  crypto_rng.h  crypto_sha256.c  crypto_sha256.h  crypto_stream.c  crypto_stream.h  curve25519.c  curve25519.h  curve25519_test.c
components/ecc/: CMakeLists.txt  README.md  ecc_arq.c  ecc_crc32.c  ecc_crc32.h  ecc_hamming.c  ecc_hamming.h
components/hal/: CMakeLists.txt  README.md  hal_adc.c  hal_adc.h  hal_gpio.h  hal_input.c  hal_input.h  hal_pins.h  hal_rgb.c  hal_rgb.h  hal_rng.h
components/mem/: CMakeLists.txt  README.md  ceepew_pipeline.c  ceepew_pipeline.h  ceepew_region.c  ceepew_region.h
components/ssd1306/: CMakeLists.txt  font8x8_basic.h  ssd1306.c  ssd1306.h  ssd1306_i2c_new.c
components/tools/: CMakeLists.txt  digital_sum.c  digital_sum.h
components/transport/: CMakeLists.txt  README.md  transport_ble.c  transport_ble.h  transport_ble_gatt_crypto.c  transport_ble_gatt_crypto.h  transport_esl.c  transport_esl.h  transport_espnow.c  transport_hop.c  transport_hop.h  transport_replay.c  transport_stream.c
driver/: adc.h  gpio.h
esp/: esp_adc_cal.h  esp_crc.h  esp_system.h
freertos/: FreeRTOS.h  timers.h
main/: CMakeLists.txt  Kconfig.projbuild  ceepew_assert.c  ceepew_assert.h  ceepew_config.h  ceepew_security_utils.c  ceepew_security_utils.h  integration_test_e2e.c  integration_test_pairing_ui.c  main.c  session_fsm.c  session_fsm.h  session_memory.h  session_msgstore.c  session_msgstore.h  session_send.c  task_session.c  task_session.h  task_ui.c  task_ui.h  test_hop.c  test_pairing_handoff.c  test_power.c  test_replay.c  test_replay_comprehensive.c
mbedtls/: hkdf.h  md.h  sha256.h
mem/: ceepew_region.h
scratch/: find_definition.py  find_transition_cause.py  parse_pairing_logs_detailed.py  parse_pairing_window.py  parse_phase.py  parse_phase_timeline.py  parse_transitions.py  print_stuck_logs.py  search_adv_stop_evt.py  search_all_task_logs.py  search_beacon_recvd.py  search_ble.py  search_ble_done.py  search_fsm.py  search_gattc_events.py  search_gatts_write.py  search_input_init.py  search_local_mac.py  search_nonces.py  search_pairing_flow.py  search_pairing_mismatch.py  search_pairing_state.py  search_peer_gatt_ready.py  search_reset.py  search_scan_duplicate.py  search_scan_rsp_update.py  search_session_main.py  search_start_adv.py  search_stop_adv.py  search_sync_visual.py  search_transitions.py  search_ui_manager_transitions.py  search_ui_states.py  search_update_state_flags.py  search_verification_context.py
scripts/: capture_dual.ps1  dual_capture.ps1  integration_smoke_test.ps1
test/: test_main.cpp
tests/: CMakeLists.txt  README.md
tests/components/ceepew_hal/: hal_oled_test.c  hal_temp_test.c  ui_cryptogram_test.c  ui_manager_test.c
tests/components/crypto/: curve25519_test.c
tests/main/: integration_test_e2e.c  integration_test_e2e.h  integration_test_pairing_e2e.c  integration_test_pairing_ui.c  test_arq_backoff.c  test_espnow_roundtrip.c  test_hop.c  test_pairing_convergence.c  test_pairing_handoff.c  test_pipeline_memory.c  test_replay_comprehensive.c  test_rng_health.c  test_transport_hop.c
tools/: README.md  ceepew_diagnose.ps1  ceepew_monitor.py  monitor_both.py  monitor_both_20260613_070105.txt  monitor_both_20260613_070105_clean.txt  serial_monitor.py  wrap_rsp_in_group.cmake
