idf_component_register(
    SRCS
        "main.c"
        "ceepew_assert.c"
        "ceepew_security_utils.c"
        "session_fsm.c"
        "session_msgstore.c"
        "session_send.c"
        "task_ui.c"
        "task_session.c"
        "integration_test_e2e.c"
        "test_pipeline_memory.c"
        "test_replay.c"
        "test_replay_comprehensive.c"
        "test_arq_backoff.c"
        "test_power.c"
        "test_hop.c"
        "test_transport_hop.c"
        "test_pairing_handoff.c"
        "integration_test_pairing_ui.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        ceepew_hal
        crypto
        ecc
        compress
        transport
        mem
        tools
        esp_system
        esp_wifi
        esp_event
        esp_timer
        freertos
        log
)
