idf_component_register(
    SRCS
        "main.c"
        "ceepew_assert.c"
        "ceepew_security_utils.c"
        "session_fsm.c"
        "session_msgstore.c"
        "session_send.c"
        "task_ui.c"
        "task_session.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        ceepew_hal
        ceepew_oled
        crypto
        ecc
        compress
        transport
        mem
        tools
        tests
        esp_system
        esp_wifi
        esp_event
        esp_timer
        freertos
        log
)
