idf_component_register(
    SRCS
        "ceepew_oled.c"
        "ceepew_oled_gfx_primitives.c"
        "ceepew_oled_font_adapter.c"
    INCLUDE_DIRS
        "include"
        "."
    REQUIRES
        driver
        esp_driver_gpio
        esp_driver_i2c
        esp_timer
        esp_common
    PRIV_REQUIRES
        main
)
