idf_component_register(
    SRCS
        "crypto_box_wrap.c"
        "crypto_ctx.c"
        "crypto_ascon.c"
        "crypto_ecdh.c"
        "crypto_eddsa.c"
        "crypto_hkdf.c"
        "crypto_sha256.c"
        "crypto_rng.c"
        "crypto_pad.c"
        "crypto_stream.c"
        "curve25519.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        main
        ceepew_hal
        mbedtls
        esp_system
        log
)
