idf_component_register(
    SRCS
        "transport_espnow.c"
        "transport_replay.c"
        "transport_esl.c"
        "transport_stream.c"
        "transport_ble.c"
        "transport_hop.c"
    INCLUDE_DIRS
        "."
        "../../main"
    REQUIRES
        ceepew_hal
        crypto
        mem
        esp_wifi
        esp_timer
        log
        esp_common
)
