idf_component_register(
    SRCS
        "transport_espnow.c"
        "transport_replay.c"
        "transport_esl.c"
        "transport_stream.c"
        "transport_ble.c"
        "transport_ble_gatt_crypto.c"
        "transport_hop.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        main
        ceepew_hal
        crypto
        mem
        bt
        esp_wifi
        esp_timer
        log
        esp_common
)
